--- a/src/MA/UserBundle/Resources/views/layout.html.twig
+++ b/src/MA/UserBundle/Resources/views/layout.html.twig
@@ -25,16 +25,16 @@
             <div id="login_content">    <!-- Element loading -->
 
                 <!-- Begin Top Buttons -->
+                <div class="row">
+                  {% if route != 'fos_user_security_login' %}
+                    <a href="{{ path('fos_user_security_login') }}" class="btn btn-log float-left top_button">
+                      {{ 'user.actions.back'|trans }}
+                    </a>
+                  {% endif %}
                   <a href="{{ path('ma_main_homepage') }}" class="btn btn-log float-right top_button">
                     {{ 'user.actions.home'|trans }}
-                    <i class="fa fa-sign-in"></i>
                   </a>
-                {% if (route != 'fos_user_security_login') %}
-                  <button onClick="loadContentLogin('{{ path('fos_user_security_login') }}')" class="btn btn-log float-right top_button">
-                    {{ 'header.titles.login' | trans }}
-                    <i class="fa fa-sign-in"></i>
-                  </button>
-                {% endif %}
+                </div>
                 <!-- End Top Buttons -->
 
                 {% if (route == 'fos_user_resetting_request') 
@@ -75,7 +75,6 @@
                           <br/>
                         {% endif %}
                         <div class="input-icon">
-                          <i class="fa fa-pencil"></i>
                           {% set opt_currentPassword = {'attr': {'class': 'form-control placeholder-no-fix',
                             'type':'text', 'placeholder': currentPassword_title, 'id':'current_password', 
                             'name':'_current_password', 'required':'required', 'autofocus':''}} %}
@@ -96,7 +95,6 @@
                           <br/>
                         {% endif %}
                         <div class="input-icon">
-                          <i class="fa fa-pencil"></i>
                           {% set opt_new_password = {'attr': {'class': 'form-control placeholder-no-fix',
                             'type':'text', 'placeholder': new_password_title, 'id':'new_password', 
                             'name':'_new_password', 'required':'required'}} %}
@@ -117,7 +115,6 @@
                           <br/>
                         {% endif %}
                         <div class="input-icon">
-                          <i class="fa fa-pencil"></i>
                           {% set opt_new_password_confirmation = {'attr': {'class': 'form-control placeholder-no-fix',
                             'type':'text', 'placeholder': new_password_confirmation_title, 'id':'new_password_confirmation', 
                             'name':'_new_password_confirmation', 'required':'required'}} %}
@@ -127,7 +124,6 @@
                       <div class="form-actions">
                         <button type="submit" class="btn btn-log pull-right">
                           {{ 'resetPassword.actions.changePassword'|trans }}
-                          <i class="m-icon-swapright m-icon-white"></i>
                         </button>
                       </div>
                       <!-- Et le reste du formulaire ... :) -->
@@ -176,7 +172,6 @@
                       {% endif %}
                       {{ form_label(form.username) }}
                       <div class="input-icon">
-                        <i class="fa fa-user"></i>
                         {% set opt_username_input = {'attr': {'class': 'form-control placeholder-no-fix',
                           'type':'text', 'placeholder': username_input, 'id':'username', 
                           'name':'username', 'required':'required', 'autofocus':''}} %}
@@ -199,7 +194,6 @@
                       {% endif %}
                       {{ email_input }}
                       <div class="input-icon">
-                        <i class="fa fa-envelope"></i>
                         {% set opt_email_input = {'attr': {'class': 'form-control placeholder-no-fix',
                           'type':'text', 'placeholder': email_input, 'id':'email',
                           'name':'email', 'required':'required'}} %}
@@ -222,7 +216,6 @@
                       {% endif %}
                       {{ password_input }}
                       <div class="input-icon">
-                        <i class="fa fa-lock"></i>
                         {% set opt_password_input = {'attr': {'class': 'form-control placeholder-no-fix',
                           'type':'password', 'placeholder': password_input, 'id':'password', 'autocomplete':'off',
                           'name':'password', 'required':'required'}} %}
@@ -245,7 +238,6 @@
                       {% endif %}
                       {{ rePassword_input }}
                       <div class="input-icon">
-                        <i class="fa fa-lock"></i>
                         {% set opt_rePassword_input = {'attr': {'class': 'form-control placeholder-no-fix',
                           'type':'password', 'placeholder': rePassword_input, 'id':'rpassword', 'autocomplete':'off',
                           'name':'rpassword', 'required':'required'}} %}
@@ -271,9 +263,8 @@
                       </label>
                     </div>
                     <div class="form-actions center">
-                      <button type="submit" id="register-submit-btn" class="btn btn-log">
+                      <button type="submit" id="register-submit-btn" class="btn">
                         {{ 'registerUser.actions.signUp'|trans }}
-                        <i class="m-icon-swapright m-icon-white"></i>
                       </button>
                     </div>
 
@@ -312,7 +303,6 @@
                           {{ 'login.titles.email'|trans }}
                         </label>
                         <div class="input-icon">
-                          <i class="fa fa-user"></i>
                           <input class="form-control placeholder-no-fix" type="text" placeholder="{{ 'login.titles.email'|trans }}" value="{{ last_username }}" id="username" name="_username" required="required" autofocus>
                         </div>
                       </div>
@@ -321,55 +311,37 @@
                           {{ 'login.titles.password'|trans }}
                         </label>
                         <div class="input-icon">
-                          <i class="fa fa-lock"></i>
                           <input class="form-control placeholder-no-fix" type="password" autocomplete="off" placeholder="{{ 'login.titles.password'|trans }}" id="password" name="_password" required="required">
                         </div>
                       </div>
-                      <div class="form-actions remember_me_box">
-                        <label for="remember_me" class="checkbox">
-                          <div class="checker">
-                            <span>
-                              <input type="checkbox" id="remember_me" name="_remember_me" value="on">
-                            </span>
-                          </div> 
-                          {{ 'login.actions.remember_me'|trans }}
-                        </label>
-                        <button type="submit" data-loading-text="{{ 'welcome.buttons.loading' | trans }}" class="demo-loading-btn btn btn-log center">
-                          {{ 'login.actions.login'|trans }}
-                          <i class="fa fa-sign-in"></i>
-                        </button>
+                      <div class="form-actions">
+                        <div class="remember_me_box">
+                          <label for="remember_me" class="checkbox">
+                            <div class="checker">
+                              <span>
+                                <input type="checkbox" id="remember_me" name="_remember_me" value="on">
+                              </span>
+                            </div> 
+                            {{ 'login.actions.remember_me'|trans }}
+                          </label>
+                        </div>
+                        <div class="center">
+                          <button type="submit" data-loading-text="{{ 'welcome.buttons.loading' | trans }}" class="demo-loading-btn btn btn-log center">
+                            {{ 'login.actions.login'|trans }}
+                          </button>
+                        </div>
                       </div>
 
                       <br/><br/>
-                      <hr/>
                       
-                      <div class="forget-password">
-                        <h4>
-                          {{ 'login.titles.forgetPassword'|trans }}
-                        </h4>
-                        <p>
-                          {{ 'login.titles.noWorriesClick'|trans }}
-                          <a href="javascript:loadContentLogin('{{ path('fos_user_resetting_request') }}')">
-                            <strong>
-                              {{ 'login.titles.here'|trans }} 
-                            </strong>
-                          </a> 
-                          {{ 'login.titles.toResetPassword'|trans }} 
-                        </p>
+                      <div class="forget-password center">
+                        <a href="{{ path('fos_user_resetting_request') }}">
+                          <strong>
+                            {{ 'login.titles.forgetPassword'|trans }}
+                          </strong>
+                        </a> 
                       </div>
 
-                      <hr/>
-
-                      <div class="create-account">
-                        <p>
-                          {{ 'login.titles.noAccount'|trans }}
-                          <a href="javascript:loadContentLogin('{{ path('fos_user_registration_register') }}')">
-                            <strong>
-                              {{ 'login.actions.createAccount'|trans }} 
-                            </strong>
-                          </a>
-                        </p>
-                      </div>
                     </form>
                 </div>
                 <!-- END LOGIN FORM -->
