--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -7,7 +7,7 @@
 			CONTACT
 		</h3>
 
-		<form id="contact_form" method="post" action="">
+		<form id="contact_form" method="post" action="{{ path('ma_main_footer_contact') }}">
 			<div class="row">
 		        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 					<div class="form-group">
@@ -43,55 +43,46 @@
 	</div>
 
 	<div class="row border_white_top">
-		<div class="row80">
+		<div class="row">
 			
 			<br/>
 			
-			<div class="row left multiple_lists footer_part footer_bottom">
-				 <div class="col-md-4 col-xs-4">
-					 <h4>
-					 	A propos
-					 </h4>
-						<a href="/remerciements">
-							Remerciements
-						</a><br />
-						<a href="/mentions-legales">
+			<div class="row center footer_part footer_bottom">
+				<ul>
+					<li>
+						<a href="" class="disabled">
 							Mentions légales
-						</a><br />
-				 </div>
-				 <div class="col-md-4 col-xs-4"> 
-					 <h4>
-					 	Besoin d'aide ?
-					 </h4>
-						<a href="/">
-							Plus d'informations
-						</a><br />
-						<a href="/">
-							Dons
-						</a><br />
-						<a href="/">
-							Notre travail
-						</a><br />
-						<a href="/">
+						</a>
+					</li> 
+					<span class="red"> — </span>
+					<li>
+						<a href="" class="disabled">
+							Remerciements
+						</a>
+					</li> 
+					<span class="red"> — </span>
+					<li>
+						<a href="" class="disabled">
 							FAQ
-						</a><br />
-				 </div>
-				 <div class="col-md-4 col-xs-4">
-				  <h4>
-				  	Toute l'actualité
-				  </h4>
-					<a href="/">
-						Le Blog
-					</a><br />
-					<a href="/">
-						Nouvelles
-					</a>
-				 </div>
+						</a>
+					</li> 
+					<span class="red"> — </span>
+					<li>
+						<a href="{{ path('ma_main_homepage') }}#actu">
+							Nouvelles
+						</a>
+					</li> 
+					<span class="red"> — </span>
+					<li>
+						<a href="" class="disabled">
+							Faire un don
+						</a>
+					</li>
+				</ul>
 			</div>
 		</div>
-		<br/><br/><br/><br/>
-		<div class="row right margin_top_10 margin_right_30 font10">
-			<br/><br/>
+		<br/><br/>
+		<div class="row center margin_top_10 font12">
 			Mission Andina - <a href="{{ path('ma_user_homepage') }}" class="no_style_a">TOUS DROITS RESERVES</a> © 2015
 		</div>
 
