--- a/src/MA/MainBundle/Resources/views/Main/helpUs.html.twig
+++ b/src/MA/MainBundle/Resources/views/Main/helpUs.html.twig
@@ -33,35 +33,35 @@
 					        	<ul>
 					        		<li>
 					        			Jumelage entre écoles françaises et péruviennes,
-					        			<ul>
+					        			<!-- <ul>
 					        				<li>
 					        					A détailler
 					        				</li>
-					        			</ul>
+					        			</ul> -->
 					        		</li>
 					        		<li>
 					        			Partenariats entre l’association et des entreprises s’inscrivant dans la démarche RSE (Responsabilité Sociale des Entreprises),
-					        			<ul>
+					        			<!-- <ul>
 					        				<li>
 					        					A détailler
 					        				</li>
-					        			</ul>
+					        			</ul> -->
 					        		</li>
 					        		<li>
 					        			Parrainages pour participer à l’action de Mission Andina,
-					        			<ul>
+					        			<!-- <ul>
 					        				<li>
 					        					A détailler
 					        				</li>
-					        			</ul>
+					        			</ul> -->
 					        		</li>
 					        		<li>
 					        			Vente d’artisanat péruvien
-					        			<ul>
+					        			<!-- <ul>
 					        				<li>
 					        					A détailler (préciser la marge effectuée et la partie reversée)
 					        				</li>
-					        			</ul>
+					        			</ul> -->
 					        		</li>
 					        		<li>
 					        			Donations (prochainement avec reçu fiscal)
@@ -110,7 +110,7 @@
 					    	</h5>
 					    	<hr class="medium_hr"/>
 					    	<div class="row">
-						    	<form action="">
+						    	<form action=" ">
 						    		<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
 						    			<div class="message_warning">
 							    			-- En construction. -- 
@@ -183,28 +183,29 @@
 					    	</div>
 					    	<div class="row" id="artisanat" style="display:none;">
 					    		<br/>
-			    				<form action="">
+			    				<form method="post" action="{{ path('ma_main_helpUs_contact') }}">
+			    					<input type="hidden" name="orderContentType" value="artisanat"/>
 			    					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				    					Veuillez entrez votre nom et votre email, ainsi que la quantité que vous désirez commandez :
 			    					</div>
 				    				<div class="form-group col-lg-5 col-md-5 col-sm-5 col-xs-12">
 										<div class="input-icon">
-											<input type="text" name="senderContact" id="senderContact" placeholder="{{ 'footer.contact.senderName' | trans }}" class="form-control placeholder-no-fix"/>
+											<input type="text" name="senderContact" id="senderContact" placeholder="{{ 'helpUs.contact.senderName' | trans }}" class="form-control placeholder-no-fix"/>
 								        </div>
 								    </div>
 								    <div class="form-group  col-lg-5 col-md-5 col-sm-5 col-xs-12">
 										<div class="input-icon">
-											<input type="email" name="emailContact" id="emailContact" placeholder="{{ 'footer.contact.senderEmail' | trans }}" class="form-control placeholder-no-fix"/>
+											<input type="email" name="emailContact" id="emailContact" placeholder="{{ 'helpUs.contact.senderEmail' | trans }}" class="form-control placeholder-no-fix"/>
 								        </div>
 									</div>
 									<div class="form-group  col-lg-2 col-md-2 col-sm-2 col-xs-12">
 										<div class="input-icon">
-											<input type="text" name="emailContact" id="emailContact" placeholder="{{ 'footer.contact.senderQuantity' | trans }}" class="form-control placeholder-no-fix"/>
+											<input type="text" name="quantityContact" id="quantityContact" placeholder="{{ 'helpUs.contact.senderQuantity' | trans }}" class="form-control placeholder-no-fix"/>
 								        </div>
 									</div>
 									<div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						                <div class="input-icon">
-						                	<textarea class="form-control placeholder-no-fix" name="corpsMail" id="corpsMail" placeholder="{{ 'footer.contact.message' | trans }}"></textarea>
+						                	<textarea class="form-control placeholder-no-fix" name="corpsMail" id="corpsMail" placeholder="{{ 'helpUs.contact.message' | trans }}"></textarea>
 						                </div>
 						            </div>
 									<div class="row center">
@@ -238,28 +239,29 @@
 					    	</div>
 					    	<div class="row" id="turbulette" style="display:none;">
 					    		<br/>
-			    				<form action="">
+			    				<form method="post" action="{{ path('ma_main_helpUs_contact') }}">
+			    					<input type="hidden" name="orderContentType" value="turbulette"/>
 			    					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				    					Veuillez entrez votre nom et votre email, ainsi que la quantité que vous désirez commandez :
 			    					</div>
 				    				<div class="form-group col-lg-5 col-md-5 col-sm-5 col-xs-12">
 										<div class="input-icon">
-											<input type="text" name="senderContact" id="senderContact" placeholder="{{ 'footer.contact.senderName' | trans }}" class="form-control placeholder-no-fix"/>
+											<input type="text" name="senderContact" id="senderContact" placeholder="{{ 'helpUs.contact.senderName' | trans }}" class="form-control placeholder-no-fix"/>
 								        </div>
 								    </div>
 								    <div class="form-group  col-lg-5 col-md-5 col-sm-5 col-xs-12">
 										<div class="input-icon">
-											<input type="email" name="emailContact" id="emailContact" placeholder="{{ 'footer.contact.senderEmail' | trans }}" class="form-control placeholder-no-fix"/>
+											<input type="email" name="emailContact" id="emailContact" placeholder="{{ 'helpUs.contact.senderEmail' | trans }}" class="form-control placeholder-no-fix"/>
 								        </div>
 									</div>
 									<div class="form-group  col-lg-2 col-md-2 col-sm-2 col-xs-12">
 										<div class="input-icon">
-											<input type="text" name="emailContact" id="emailContact" placeholder="{{ 'footer.contact.senderQuantity' | trans }}" class="form-control placeholder-no-fix"/>
+											<input type="text" name="quantityContact" id="quantityContact" placeholder="{{ 'helpUs.contact.senderQuantity' | trans }}" class="form-control placeholder-no-fix"/>
 								        </div>
 									</div>
 									<div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						                <div class="input-icon">
-						                	<textarea class="form-control placeholder-no-fix" name="corpsMail" id="corpsMail" placeholder="{{ 'footer.contact.message' | trans }}"></textarea>
+						                	<textarea class="form-control placeholder-no-fix" name="corpsMail" id="corpsMail" placeholder="{{ 'helpUs.contact.message' | trans }}"></textarea>
 						                </div>
 						            </div>
 									<div class="row center">
@@ -293,28 +295,29 @@
 					    	</div>
 					    	<div class="row" id="CD" style="display:none;">
 					    		<br/>
-			    				<form action="">
+			    				<form method="post" action="{{ path('ma_main_helpUs_contact') }}">
+			    					<input type="hidden" name="orderContentType" value="CDchant"/>
 			    					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				    					Veuillez entrez votre nom et votre email, ainsi que la quantité que vous désirez commandez :
 			    					</div>
 				    				<div class="form-group col-lg-5 col-md-5 col-sm-5 col-xs-12">
 										<div class="input-icon">
-											<input type="text" name="senderContact" id="senderContact" placeholder="{{ 'footer.contact.senderName' | trans }}" class="form-control placeholder-no-fix"/>
+											<input type="text" name="senderContact" id="senderContact" placeholder="{{ 'helpUs.contact.senderName' | trans }}" class="form-control placeholder-no-fix"/>
 								        </div>
 								    </div>
 								    <div class="form-group  col-lg-5 col-md-5 col-sm-5 col-xs-12">
 										<div class="input-icon">
-											<input type="email" name="emailContact" id="emailContact" placeholder="{{ 'footer.contact.senderEmail' | trans }}" class="form-control placeholder-no-fix"/>
+											<input type="email" name="emailContact" id="emailContact" placeholder="{{ 'helpUs.contact.senderEmail' | trans }}" class="form-control placeholder-no-fix"/>
 								        </div>
 									</div>
 									<div class="form-group  col-lg-2 col-md-2 col-sm-2 col-xs-12">
 										<div class="input-icon">
-											<input type="text" name="emailContact" id="emailContact" placeholder="{{ 'footer.contact.senderQuantity' | trans }}" class="form-control placeholder-no-fix"/>
+											<input type="text" name="quantityContact" id="quantityContact" placeholder="{{ 'helpUs.contact.senderQuantity' | trans }}" class="form-control placeholder-no-fix"/>
 								        </div>
 									</div>
 									<div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						                <div class="input-icon">
-						                	<textarea class="form-control placeholder-no-fix" name="corpsMail" id="corpsMail" placeholder="{{ 'footer.contact.message' | trans }}"></textarea>
+						                	<textarea class="form-control placeholder-no-fix" name="corpsMail" id="corpsMail" placeholder="{{ 'helpUs.contact.message' | trans }}"></textarea>
 						                </div>
 						            </div>
 									<div class="row center">
