--- a/src/MA/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/MA/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -467,26 +467,66 @@
 
 							<div class="slide_content">
 								{% if videosEcoliers|length > 0 %}
-									<div class="col-md-3">
-										{% for video in videosEcoliers %}
-											<div class="row">
-												<a href="#" class="btn btn-video">
-													{{ video.title }}
-												</a>
-											</div>
-										{% endfor %}
-									</div>
-									<div class="col-md-9">
-										{% if videoEcoliersSelect %}
-											<!-- 16:9 aspect ratio -->
-											<div class="embed-responsive embed-responsive-16by9">
-											  <iframe class="embed-responsive-item" src="{{ videoEcoliers.link }}" allowfullscreen></iframe>
-											</div>
+									<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 left">
+										<br/><br/>
+										<strong>
+											Vidéos :
+										</strong>
+										{% if videosEcoliers|length > 0 %}
+											<ul class="list_no_style_li list_videos list_videos_white">
+												{% for video in videosEcoliers %}
+													<li class="video_link {% if video == videoAsked %}li_video_active{% endif %}" id="video_eco_{{ video.id }}">
+														<a href="javascript:displaySelectedVideo('{{ path('ma_main_homepage_elementAjax', {'elementType':'video', 'elementId':video.id}) }}', 'video_content_ecoliers', 'video_eco_{{ video.id }}')" class="no_style_a white">
+															{{ video.title|truncate(40, false, '...') }}
+														</a>
+														<span class="float-right arrow_video">
+															<img src="{{ asset('img/system/defaults/right_arrow_white.png') }}" alt=""/>
+														</span>
+														<span class="float-right date_video">
+															{% if video.createdAt|length > 0 %}
+																{{ video.createdAt|date('d M Y') }}
+															{% else %}
+																(Vide)
+															{% endif %}
+														</span>
+													</li>
+												{% endfor %}
+											</ul>
 										{% else %}
-											<p class="center">
-												Aucune vidéo n'a été sélectionnée. Choisissez celle que vous désirez voir sur votre gauche.
-											</p>
+											Aucune vidéo
 										{% endif %}
+									</div>
+									<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 border_black_left">
+										<div id="video_content_ecoliers">
+											{% set no_video_found_ecoliers = 'NO' %}
+											{% for video in videosEcoliers %}
+												{% if video == videoAsked %}
+													{% if videoAsked.title|length > 0 and videoAsked.link|length > 0 %}
+
+														<!-- 16:9 aspect ratio -->
+														<div class="embed-responsive embed-responsive-16by9">
+														  <iframe class="embed-responsive-item" src="{{ videoAsked.link }}"></iframe>
+														</div>
+														<br/>
+														<div class="center">
+															<strong>
+																{{ videoAsked.title }}
+															</strong>
+														</div>
+													{% else %}
+														<p class="center">
+															Cette vidéo n'est pas complète.
+														</p>
+													{% endif %}
+													{% set no_video_found_ecoliers = 'YES' %}
+												{% endif %}
+											{% endfor %}
+											{% if no_video_found_ecoliers == 'NO' %}
+												<p class="center">
+													Aucune vidéo n'a été sélectionnée. Choisissez celle que vous désirez voir sur votre gauche.
+												</p>
+											{% endif %}
+										</div>
 									</div>
 								{% else %}
 									<p class="center">
@@ -572,7 +612,9 @@
 												var cw = $('.photo_default').width();
 												$('.photo_default').css({'height':cw+'px'});
 											</script>
-											{{ photo.title }}
+											<strong>
+												{{ photo.title }}
+											</strong>
 										</div>
 									{% endfor %}
 								{% else %}
@@ -618,26 +660,66 @@
 
 							<div class="slide_content">
 								{% if videosEtudiants|length > 0 %}
-									<div class="col-md-3">
-										{% for video in videosEtudiants %}
-											<div class="row">
-												<a href="#" class="btn btn-video">
-													{{ video.title }}
-												</a>
-											</div>
-										{% endfor %}
-									</div>
-									<div class="col-md-9">
-										{% if videoEtudiantsSelect %}
-											<!-- 16:9 aspect ratio -->
-											<div class="embed-responsive embed-responsive-16by9">
-											  <iframe class="embed-responsive-item" src="{{ videoEtudiants.link }}" allowfullscreen></iframe>
-											</div>
+									<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 left">
+										<br/><br/>
+										<strong>
+											Vidéos :
+										</strong>
+										{% if videosEtudiants|length > 0 %}
+											<ul class="list_no_style_li list_videos">
+												{% for video in videosEtudiants %}
+													<li class="video_link {% if video == videoAsked %}li_video_active{% endif %}" id="video_etu_{{ video.id }}">
+														<a href="javascript:displaySelectedVideo('{{ path('ma_main_homepage_elementAjax', {'elementType':'video', 'elementId':video.id}) }}', 'video_content_etudiants', 'video_etu_{{ video.id }}')" class="no_style_a">
+															{{ video.title|truncate(40, false, '...') }}
+														</a>
+														<span class="float-right arrow_article">
+															<img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt=""/>
+														</span>
+														<span class="float-right date_article">
+															{% if video.createdAt|length > 0 %}
+																{{ video.createdAt|date('d M Y') }}
+															{% else %}
+																(Vide)
+															{% endif %}
+														</span>
+													</li>
+												{% endfor %}
+											</ul>
 										{% else %}
-											<p class="center">
-												Aucune vidéo n'a été sélectionnée. Choisissez celle que vous désirez voir sur votre gauche.
-											</p>
+											Aucune vidéo
 										{% endif %}
+									</div>
+									<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 border_black_left">
+										<div id="video_content_etudiants">
+											{% set no_video_found_etudiants = 'NO' %}
+											{% for video in videosEtudiants %}
+												{% if video == videoAsked %}
+													{% if videoAsked.title|length > 0 and videoAsked.link|length > 0 %}
+
+														<!-- 16:9 aspect ratio -->
+														<div class="embed-responsive embed-responsive-16by9">
+														  <iframe class="embed-responsive-item" src="{{ videoAsked.link }}"></iframe>
+														</div>
+														<br/>
+														<div class="center">
+															<strong>
+																{{ videoAsked.title }}
+															</strong>
+														</div>
+													{% else %}
+														<p class="center">
+															Cette vidéo n'est pas complète.
+														</p>
+													{% endif %}
+													{% set no_video_found_etudiants = 'YES' %}
+												{% endif %}
+											{% endfor %}
+											{% if no_video_found_etudiants == 'NO' %}
+												<p class="center">
+													Aucune vidéo n'a été sélectionnée. Choisissez celle que vous désirez voir sur votre gauche.
+												</p>
+											{% endif %}
+										</div>
 									</div>
 								{% else %}
 									<p class="center">
@@ -731,7 +813,9 @@
 												var cw = $('.photo_default').width();
 												$('.photo_default').css({'height':cw+'px'});
 											</script>
-											{{ photo.title }}
+											<strong>
+												{{ photo.title }}
+											</strong>
 										</div>
 									{% endfor %}
 								{% else %}
@@ -777,26 +861,66 @@
 
 							<div class="slide_content">
 								{% if videosJeunesPro|length > 0 %}
-									<div class="col-md-3">
-										{% for video in videosJeunesPro %}
-											<div class="row">
-												<a href="#" class="btn btn-video">
-													{{ video.title }}
-												</a>
-											</div>
-										{% endfor %}
-									</div>
-									<div class="col-md-9">
-										{% if videoJeunesProSelect %}
-											<!-- 16:9 aspect ratio -->
-											<div class="embed-responsive embed-responsive-16by9">
-											  <iframe class="embed-responsive-item" src="{{ videoJeunesPro.link }}" allowfullscreen></iframe>
-											</div>
+									<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 left">
+										<br/><br/>
+										<strong>
+											Vidéos :
+										</strong>
+										{% if videosJeunesPro|length > 0 %}
+											<ul class="list_no_style_li list_videos">
+												{% for video in videosJeunesPro %}
+													<li class="video_link {% if video == videoAsked %}li_video_active{% endif %}" id="video_jep_{{ video.id }}">
+														<a href="javascript:displaySelectedVideo('{{ path('ma_main_homepage_elementAjax', {'elementType':'video', 'elementId':video.id}) }}', 'video_content_jeunesPro', 'video_jep_{{ video.id }}')" class="no_style_a">
+															{{ video.title|truncate(40, false, '...') }}
+														</a>
+														<span class="float-right arrow_article">
+															<img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt=""/>
+														</span>
+														<span class="float-right date_article">
+															{% if video.createdAt|length > 0 %}
+																{{ video.createdAt|date('d M Y') }}
+															{% else %}
+																(Vide)
+															{% endif %}
+														</span>
+													</li>
+												{% endfor %}
+											</ul>
 										{% else %}
-											<p class="center">
-												Aucune vidéo n'a été sélectionnée. Choisissez celle que vous désirez voir sur votre gauche.
-											</p>
+											Aucune vidéo
 										{% endif %}
+									</div>
+									<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 border_black_left">
+										<div id="video_content_jeunesPro">
+											{% set no_video_found_jeunesPro = 'NO' %}
+											{% for video in videosJeunesPro %}
+												{% if video == videoAsked %}
+													{% if videoAsked.title|length > 0 and videoAsked.link|length > 0 %}
+
+														<!-- 16:9 aspect ratio -->
+														<div class="embed-responsive embed-responsive-16by9">
+														  <iframe class="embed-responsive-item" src="{{ videoAsked.link }}"></iframe>
+														</div>
+														<br/>
+														<div class="center">
+															<strong>
+																{{ videoAsked.title }}
+															</strong>
+														</div>
+													{% else %}
+														<p class="center">
+															Cette vidéo n'est pas complète.
+														</p>
+													{% endif %}
+													{% set no_video_found_jeunesPro = 'YES' %}
+												{% endif %}
+											{% endfor %}
+											{% if no_video_found_jeunesPro == 'NO' %}
+												<p class="center">
+													Aucune vidéo n'a été sélectionnée. Choisissez celle que vous désirez voir sur votre gauche.
+												</p>
+											{% endif %}
+										</div>
 									</div>
 								{% else %}
 									<p class="center">
@@ -890,7 +1014,9 @@
 												var cw = $('.photo_default').width();
 												$('.photo_default').css({'height':cw+'px'});
 											</script>
-											{{ photo.title }}
+											<strong>
+												{{ photo.title }}
+											</strong>
 										</div>
 									{% endfor %}
 								{% else %}
@@ -934,7 +1060,7 @@
 									{% for single_article in articles %}
 										<li class="article_link {% if single_article == articleAsked %}li_article_active{% endif %}" id="article_n_{{ single_article.id }}">
 											<a href="javascript:displaySelectedArticle('{{ path('ma_main_homepage_elementAjax', {'elementType':'article', 'elementId':single_article.id}) }}', 'article_n_{{ single_article.id }}')" class="no_style_a">
-												{{ single_article.title }}
+												{{ single_article.title|truncate(40, false, '...') }}
 											</a>
 											<span class="float-right arrow_article">
 												<img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt=""/>
@@ -950,13 +1076,13 @@
 									{% endfor %}
 								</ul>
 							{% else %}
-								Aucun article
+								Aucun article disponible pour l'instant
 							{% endif %}
 						</div>
 
 						<div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
 							<div class="row" id="article_content">
-								
+								{% if articleAsked %}
 								<div class="thumbnail">
 									<div>
 										{% if articleAsked.alt|length > 0  and articleAsked.url|length > 0 %}
@@ -978,20 +1104,16 @@
 													{% if articleAsked.title|length > 0 %}
 														{{ articleAsked.title|raw }}
 													{% else %}
-														(Vide)
+														(Titre vide)
 													{% endif %}
 												</h4>
 											</div>
 											<div class="inline_div float-right italic">
 												{% if articleAsked.place|length > 0 %}
 													{{ articleAsked.place }},
-												{% else %}
-													(Vide)
 												{% endif %}
 												{% if articleAsked.createdAt|length > 0 %}
 													le {{ articleAsked.createdAt|date('d M Y') }} à {{ articleAsked.createdAt|date('H:i') }}
-												{% else %}
-													(Vide)
 												{% endif %}
 											</div>
 										</div>
@@ -999,15 +1121,13 @@
 										<div class="row hidden-lg hidden-md hidden-sm">
 											{% if articleAsked.content|length > 0 %}
 												{{ articleAsked.content|raw|truncate(100, false, '...') }}
-											{% else %}
-												(Vide)
 											{% endif %}
 										</div>
 										<div class="row hidden-xs">
 											{% if articleAsked.content|length > 0 %}
 												{{ articleAsked.content|raw|truncate(600, false, '...') }}
 											{% else %}
-												(Vide)
+												(Article vide)
 											{% endif %}
 										</div>
 
@@ -1019,6 +1139,7 @@
 						    			</div>
 									</div>
 								</div>
+								{% endif %}
 							</div>
 							<div id="article_photo_script">
 								<script type="text/javascript">
